<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    tools:context=".ui.CurrentWeatherFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="43dp"
            android:fontFamily="@font/sf_pro_regular"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="9:15 AM" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="32dp"
            android:background="@android:color/transparent"
            android:src="@drawable/search"
            android:contentDescription="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/time"
            app:layout_constraintTop_toTopOf="@id/time" />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time"
            android:layout_marginTop="66dp"
            android:fontFamily="@font/sf_pro_regular"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:text="San Francisco" />

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/sf_pro_regular"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="Tuesday, 12 Apr 2022" />

        <ImageView
            android:id="@+id/weather_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/day"
            android:layout_marginTop="50dp"
            android:src="@drawable/sunny"
            android:contentDescription="@string/weather_image"
            />


        <TextView
            android:id="@+id/degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_image"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/sf_pro_regular"
            android:textColor="@color/white"
            android:textSize="56sp"
            android:textStyle="bold"
            tools:text="82.4°F" />


        <TextView
            android:id="@+id/weather_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/degree"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/sf_pro_regular"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="It’s a sunny day." />

        <ImageView
            android:id="@+id/wind_speed_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            app:layout_constraintStart_toStartOf="@id/degree"
            app:layout_constraintTop_toBottomOf="@id/weather_status"
            android:contentDescription="@string/wind_image"
            android:src="@drawable/wind"/>

        <TextView
            android:id="@+id/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/weather_status"
            app:layout_constraintStart_toEndOf="@id/wind_speed_img"
            app:layout_constraintBottom_toBottomOf="@id/wind_speed_img"
            android:layout_marginTop="21dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/sf_pro_regular"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:text="3 mph" />

        <TextView
            android:id="@+id/droplet_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/weather_status"
            app:layout_constraintEnd_toEndOf="@id/degree"
            app:layout_constraintBottom_toBottomOf="@id/droplet_img"
            android:layout_marginTop="21dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/sf_pro_regular"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:text="60%" />

        <ImageView
            android:id="@+id/droplet_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/weather_status"
            app:layout_constraintEnd_toStartOf="@id/droplet_percentage"
            android:contentDescription="@string/droplet_image"
            android:src="@drawable/droplet"/>


        <ImageView
            android:id="@+id/tomorrow_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/wind_speed"
            android:src="@drawable/sunny"
            android:contentDescription="@string/weather_image"
            />

        <TextView
            android:id="@+id/tomorrow_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="19/30"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@id/tomorrow_icon"
            app:layout_constraintStart_toStartOf="@+id/tomorrow_icon"
            app:layout_constraintTop_toBottomOf="@id/tomorrow_icon"
            />

        <TextView
            android:id="@+id/tomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tomorrow"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@id/tomorrow_degree"
            app:layout_constraintStart_toStartOf="@+id/tomorrow_degree"
            app:layout_constraintTop_toBottomOf="@id/tomorrow_degree"
            />


        <ImageView
            android:id="@+id/today_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:layout_constraintTop_toTopOf="@id/tomorrow_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="80dp"
            android:src="@drawable/sunny"
            android:contentDescription="@string/weather_image"
            />

        <TextView
            android:id="@+id/today_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="19/30"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@id/today_icon"
            app:layout_constraintStart_toStartOf="@+id/today_icon"
            app:layout_constraintTop_toBottomOf="@id/today_icon"
            />

        <TextView
            android:id="@+id/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@id/today_degree"
            app:layout_constraintStart_toStartOf="@+id/today_degree"
            app:layout_constraintTop_toBottomOf="@id/today_degree"
            />

        <ImageView
            android:id="@+id/fri_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tomorrow_icon"
            android:layout_marginEnd="80dp"
            app:layout_constraintTop_toBottomOf="@id/wind_speed"
            android:src="@drawable/sunny"
            android:contentDescription="@string/weather_image"
            />

        <TextView
            android:id="@+id/fri_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="19/30"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@id/fri_icon"
            app:layout_constraintStart_toStartOf="@+id/fri_icon"
            app:layout_constraintTop_toBottomOf="@id/fri_icon"
            />

        <TextView
            android:id="@+id/fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overmorrow"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@id/fri_degree"
            app:layout_constraintStart_toStartOf="@+id/fri_degree"
            app:layout_constraintTop_toBottomOf="@id/fri_degree"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


<ProgressBar
    android:id="@+id/progressbar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:visibility="gone"
    />

</FrameLayout>